# rosbag2

ros2bag/ros2bag/verb/: play.py
rosbag2/: CMakeLists.txt
rosbag2/include/rosbag2/: rosbag2.hpp
rosbag2/include/rosbag2/plugins/: builtin_interfaces_factories.hpp  convert_builtin_interfaces.hpp  convert_decl.hpp  factory.hpp  factory_interface.hpp  ros1_player.hpp
rosbag2/resource/: get_factory.cpp.em  get_mappings.cpp.em  pkg_factories.cpp.em  pkg_factories.hpp.em
rosbag2/rosbag2/: __init__.py
rosbag2/src/rosbag2/: ros1player.cpp
rosbag2/src/rosbag2/plugins/: builtin_interfaces_factories.cpp  convert_builtin_interfaces.cpp
rosbag2_storage/test/rosbag2_storage/: test_plugin.cpp  test_plugin.hpp
rosbag2_transport/: CMakeLists.txt
rosbag2_transport/include/rosbag2_transport/: clock.hpp  play_options.hpp  translate.hpp
rosbag2_transport/src/rosbag2_transport/: clock.cpp  player.cpp  player.hpp  rosbag2_transport_python.cpp  translate.cpp
